added final updates

--- a/committees-gallery.html
+++ b/committees-gallery.html
@@ -84,6 +84,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="./messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="committees-gallery.html">Committees</a>
             </li>
             <li class="nav-item dropdown">
@@ -237,6 +240,39 @@
                 <img
                   class="d-block img-fluid"
                   style="background-color: rgb(255, 93, 93)"
+                  src="./delegates-logo/unw-white.png"
+                  alt=""
+                />
+                <div class="card-body" style="background-color: #f4f4f4">
+                  <h3>United Nations Commission on the Status of Women</h3>
+
+                  <p class="card-text">
+                    United Nations Commission on the Status of Women (UNCSW) is
+                    the principal global intergovernmental body exclusively
+                    dedicated to the promotion of gender equality and the
+                    empowerment of women.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <a
+                        class="btn btn-outline-secondary"
+                        href="./delegates/csw.html"
+                      >
+                        Read more
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col col-lg-4 d-flex align-items-stretch">
+              <div class="card shadow-lg rounded">
+                <img
+                  class="d-block img-fluid"
+                  style="background-color: rgb(255, 93, 93)"
                   src="./delegates-logo/unhrc-white.png"
                   alt=""
                 />
@@ -291,6 +327,39 @@
               </div>
             </div>
             <div class="col col-lg-4 d-flex align-items-stretch">
+              <!-- <div class="card shadow-lg rounded">
+                <img
+                  class="d-block img-fluid"
+                  style="background-color: rgb(255, 93, 93)"
+                  src="./delegates-logo/ip-white.png"
+                  alt=""
+                />
+                <div class="card-body" style="background-color: #f4f4f4">
+                  <h3>International Press Corps</h3>
+
+                  <p class="card-text">
+                    "In a post-truth era, reportage not only defines access to
+                    information but also the perception of truth itself." At
+                    AMIMUN’21 we believe that the job of International Press is
+                    one that requires utmost commitment, sincerity and belief in
+                    the ideals of media itself.
+                  </p>
+                  <div
+                    class="d-flex justify-content-between align-items-center"
+                  >
+                    <div class="btn-group">
+                      <a
+                        class="btn btn-outline-secondary"
+                        href="./delegates/ip.html"
+                      >
+                        Read more
+                      </a>
+                    </div>
+                  </div>
+                </div>
+                </div> -->
+            </div>
+            <div class="col col-lg-4 d-flex align-items-stretch">
               <div class="card shadow-lg rounded">
                 <img
                   class="d-block img-fluid"
@@ -323,6 +392,7 @@
                 </div>
               </div>
             </div>
+            
           </div>
         </div>
       </div>
