--- a/delegates/ga.html
+++ b/delegates/ga.html
@@ -81,6 +81,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="../messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../committees-gallery.html"
                 >Committees</a
               >
@@ -101,7 +104,11 @@
                 aria-labelledby="navbarDropdownMenuLink"
               >
                 <li>
-                  <a class="dropdown-item" href="../register/delegate_register.html">Delegate Application</a>
+                  <a
+                    class="dropdown-item"
+                    href="../register/delegate_register.html"
+                    >Delegate Application</a
+                  >
                 </li>
                 <li>
                   <a class="dropdown-item" href="../register/ip_register.html"
@@ -130,7 +137,8 @@
         <div class="px-0">
           <h1 class="display-4 font-italic">United Nations General Assembly</h1>
           <p class="lead my-3">
-             <h4>Agenda: </h4>Discussion on the propagation of peace and security in the Middle East with special emphasis on the viability of the JCPOA
+            <h4>Agenda:</h4>Discussion on the propagation of peace and security in
+            the Middle East with special emphasis on the viability of the JCPOA
           </p>
         </div>
       </div>
@@ -170,6 +178,37 @@
               src="../static/IMG_5886.JPG"
               alt=""
             />
+          </div>
+        </div>
+         <div class="container marketing mt-5 p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
+          <!-- START THE FEATURETTES -->
+          <div class="eb-container">
+           <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../static/Siddhant Bajaj.png"
+              alt=""
+            />
+            <h3 class="text-center m-3">Siddhant Baja</h3>
+                        <h5 class="text-center m-3">Co-Chairperson</h5>
+
+          </div>
+           <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../delegates-logo/un-white.png"
+              alt=""
+            />
+           </div>
+         <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../static/Shikhar Tripathi.JPEG"
+              alt=""
+            />
+            <h3 class="text-center m-3">Shikhar Tripathi</h3>
+                        <h5 class="text-center m-3">Co-Chairperson</h5>
+
           </div>
         </div>
 
