--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
               >
                 Our Team
               </a>
+
               <ul
                 class="dropdown-menu"
                 aria-labelledby="navbarDropdownMenuLink"
@@ -80,10 +81,14 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link text-white" href="./messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link text-white" href="committees-gallery.html"
                 >Committees</a
               >
             </li>
+
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle text-white"
@@ -107,7 +112,9 @@
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
+                  <a
+                    class="dropdown-item"
+                    href="https://www.amity.edu/SPG/AMIMUN2021/register/ipform.aspx"
                     >International Press Application</a
                   >
                 </li>
@@ -246,13 +253,36 @@
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Next</span>
         </a>
-      </div>
-
       <!-- Marketing messaging and featurettes
       ================================================== -->
       <!-- Wrap the rest of the page in another container to center all the content. -->
 
       <div class="container marketing mt-5">
+        <div
+          class="p-5 mt-5 m-5 mx-auto text-grey rounded"
+          style="background-color: #f5a98c"
+        >
+          <div class="px-0">
+            <h1 class="display-4 font-italic">
+              Message from Secretary General United Nations
+            </h1>
+          </div>
+        </div>
+         <div class="mt-5 bg-light">
+          <div
+            class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-lg h-md-250 position-relative"
+            style="background-color: #f4f4f4"
+          >
+            <div class="col p-4 d-flex flex-column position-static">
+             
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe width="100%" height="600px" src="https://www.youtube.com/embed/75S6Sq51Grg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+              </div>
+            </div>
+          </div>
+          </div>
+                  <hr class="featurette-divider mt-5" />
+
         <div
           class="p-5 mt-5 m-5 mx-auto text-grey rounded"
           style="background-color: #f5a98c"
@@ -478,7 +508,7 @@
           </div>
         </div> -->
 
-        <hr class="featurette-divider" />
+        <!-- <hr class="featurette-divider" /> -->
         <!-- /END THE FEATURETTES -->
 
         <!-- Three columns of text below the carousel -->
@@ -494,8 +524,9 @@
           <!-- <h3>Announcing soon..</h3> -->
           <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
             <img
-              class="d-block img-fluid"
-              src="./static/Doctors Without Borders.png"
+              class="d-block img-fluid m-auto"
+              style="width: 300px;"
+              src="./static/India_logo.png"
               alt=""
             />
 
@@ -513,9 +544,9 @@
             </p> -->
           </div>
           <!-- /.col-lg-4 -->
-          <div class="col-lg-5 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-5 col-md-6 mb-4 mb-lg-5 ">
             <img
-              class="d-block img-fluid"
+              class="d-block img-fluid w-100"
               src="./static/partnership_office_new_delhi_black_page-0001.jpg"
               alt=""
             />
@@ -534,10 +565,11 @@
             </p> -->
           </div>
           <!-- /.col-lg-4 -->
-          <div class="col-lg-5 col-md-5 mb-4 mb-lg-5">
+          <div class="col-lg-5 col-md-5 mb-4 mb-lg-5 w-100">
             <img
-              class="d-block m-auto img-fluid"
-              src="./static/India_logo.png"
+              class="d-block m-auto img-fluid "
+              style="width: 3000px;"
+              src="./static/Doctors Without Borders.png"
               alt=""
             />
 
