--- a/messages/org-com.html
+++ b/messages/org-com.html
@@ -82,6 +82,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="../messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../committees-gallery.html"
                 >Committees</a
               >
@@ -175,56 +178,56 @@
                   <tbody>
                     <tr>
                       <th scope="row">1</th>
-                      <td>SHUBHANGI THAKUR</td>
+                      <td>Shubhangi Thakur</td>
                       <td>USG</td>
                       <td>BTech CSE - 3C</td>
                     </tr>
 
                     <tr>
                       <th scope="row">2</th>
-                      <td>SADHAYA RUDRANI</td>
+                      <td>Sandhaya Rudrani</td>
                       <td>Dy.USG</td>
                       <td>B.A (H) ECONOMICS</td>
                     </tr>
 
                     <tr>
                       <th scope="row">3</th>
-                      <td>AAKANSHI BANSAL</td>
+                      <td>Aakanshi Bansal</td>
                       <td>OC</td>
                       <td>B.A. (H) Political Science + B.Ed</td>
                     </tr>
 
                     <tr>
                       <th scope="row">4</th>
-                      <td>AREEBA BASHARAT</td>
+                      <td>Areeba Bashrat</td>
                       <td>OC</td>
                       <td>BA+MA (Clinical Psychology) - Integrated</td>
                     </tr>
 
                     <tr>
                       <th scope="row">5</th>
-                      <td>CHIRAG SHARMA</td>
+                      <td>Chirag Sharma</td>
                       <td>OC</td>
                       <td>BA(H)- Intl Relations</td>
                     </tr>
 
                     <tr>
                       <th scope="row">6</th>
-                      <td>KASHISH ADLAKHA</td>
+                      <td>Kashish Adlakha</td>
                       <td>OC</td>
-                      <td>B- Pharmacy</td>
+                      <td>B-Pharmacy</td>
                     </tr>
 
                     <tr>
                       <th scope="row">7</th>
-                      <td>KOUSTAV BHATTACHARJEE</td>
+                      <td>Koustav Bhattacharjee</td>
                       <td>OC</td>
                       <td>BBA LLB</td>
                     </tr>
 
                     <tr>
                       <th scope="row">8</th>
-                      <td>YASH CHAUHAN</td>
+                      <td>Yash Chauhan</td>
                       <td>OC</td>
                       <td>BBA</td>
                     </tr>
@@ -235,12 +238,12 @@
           </div>
           <div class="accordion-item">
             <h2 class="accordion-header" id="headingTwo">
-              <button
-                class="accordion-button collapsed"
+               <button
+                class="accordion-button"
                 type="button"
                 data-bs-toggle="collapse"
                 data-bs-target="#collapseTwo"
-                aria-expanded="false"
+                aria-expanded="true"
                 aria-controls="collapseTwo"
               >
                 Marketing
@@ -248,7 +251,7 @@
             </h2>
             <div
               id="collapseTwo"
-              class="accordion-collapse collapse"
+              class="accordion-collapse collapse show"
               aria-labelledby="headingTwo"
               data-bs-parent="#accordionExample"
             >
@@ -277,99 +280,76 @@
                       <td>BA(HONS) APPLIED PSYCHOLOGY</td>
                     </tr>
 
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>Aliasgar Malik</td>
-                      <td>OC</td>
-                      <td>BTECH(AEROSPACE)</td>
-                    </tr>
 
                     <tr>
-                      <th scope="row">4</th>
+                      <th scope="row">3</th>
                       <td>Abdul Razzaq</td>
                       <td>OC</td>
                       <td>Bachelor of Film and Television Production</td>
                     </tr>
 
                     <tr>
-                      <th scope="row">5</th>
+                      <th scope="row">4</th>
                       <td>Ayush Daga</td>
                       <td>OC</td>
                       <td>BCOM (HONS)</td>
                     </tr>
 
                     <tr>
-                      <th scope="row">6</th>
+                      <th scope="row">5</th>
                       <td>Anukriti Singh</td>
                       <td>OC</td>
                       <td>B.com (hons.)</td>
                     </tr>
 
                     <tr>
-                      <th scope="row">7</th>
+                      <th scope="row">6</th>
                       <td>Amartya Sumukh Varma</td>
                       <td>OC</td>
                       <td>B.Tech(CSE)</td>
                     </tr>
 
-                    <tr>
-                      <th scope="row">8</th>
-                      <td>Eshaan Verma</td>
-                      <td>OC</td>
-                      <td>B.Tech(CSE)</td>
-                    </tr>
+                
 
                     <tr>
-                      <th scope="row">9</th>
+                      <th scope="row">7</th>
                       <td>Kavya</td>
                       <td>OC</td>
                       <td>B.Sc.+M.Sc. biotechnology (Dual Degree)</td>
                     </tr>
 
                     <tr>
-                      <th scope="row">10</th>
+                      <th scope="row">8</th>
                       <td>Rakshan Sadhu</td>
                       <td>OC</td>
                       <td>Bba artificial intelligence</td>
                     </tr>
 
-                    <tr>
-                      <th scope="row">11</th>
-                      <td>Ritish Jawa</td>
-                      <td>OC</td>
-                      <td>B Pharmacy</td>
-                    </tr>
 
                     <tr>
-                      <th scope="row">12</th>
+                      <th scope="row">9</th>
                       <td>Shambhavi Sharma</td>
                       <td>OC</td>
                       <td>B.Tech(CSE)</td>
                     </tr>
 
                     <tr>
-                      <th scope="row">13</th>
+                      <th scope="row">10</th>
                       <td>Sukhman Kaur</td>
                       <td>OC</td>
                       <td>B.A(H) Economics</td>
                     </tr>
 
                     <tr>
-                      <th scope="row">14</th>
+                      <th scope="row">11</th>
                       <td>Sagar C V</td>
                       <td>OC</td>
                       <td>B.Tech(ECE)+MBA intg.</td>
                     </tr>
 
-                    <tr>
-                      <th scope="row">15</th>
-                      <td>Lavanya Malhotra</td>
-                      <td>OC</td>
-                      <td>ALS</td>
-                    </tr>
 
                     <tr>
-                      <th scope="row">16</th>
+                      <th scope="row">12</th>
                       <td>Shriya Gaur</td>
                       <td>OC</td>
                       <td>BA Psychology (Hons)</td>
@@ -409,12 +389,13 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
+                     <tr>
                       <th scope="row">1</th>
                       <td>Isha Khurana</td>
                       <td>USG</td>
-                      <td>B.A LLB (Hons)</td>
+                      <td>BA-LLB</td>
                     </tr>
+
 
                     <tr>
                       <th scope="row">2</th>
@@ -423,15 +404,10 @@
                       <td>B.Des Product Design</td>
                     </tr>
 
-                    <tr>
-                      <th scope="row">3</th>
-                      <td>Saba Shahidi</td>
-                      <td>OC</td>
-                      <td>B.Com(hons)</td>
-                    </tr>
+                
 
                     <tr>
-                      <th scope="row">4</th>
+                      <th scope="row">3</th>
                       <td>Debopriya Karmakar</td>
                       <td>OC</td>
                       <td>B.tech(CSE)</td>
