--- a/messages/sec.html
+++ b/messages/sec.html
@@ -82,6 +82,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="../messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../committees-gallery.html"
                 >Committees</a
               >
@@ -142,15 +145,15 @@
       <!-- Second Row [Team]-->
       <section class="container rounded" style="background: #fff">
         <div class="row p-5 mb-4 d-flex justify-content-center">
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../static/mesh.JPG"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Meshuwa Mawthoh</h5>
                   <p class="small text-muted">Secretary General</p>
@@ -159,32 +162,15 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5">
+           <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/SIMRAN.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
-                <div class="p-4">
-                  <h5 class="mb-0">Rohan Nagpal</h5>
-                  <p class="small text-muted">Director General</p>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5">
-            <!-- Card-->
-            <div class="card shadow-lg border-0 rounded">
-              <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
-                  alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Simran Malhotra</h5>
                   <p class="small text-muted">Charge D'Affairs</p>
@@ -193,15 +179,34 @@
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/ROHAN.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
+                <div class="p-4">
+                  <h5 class="mb-0">Rohan Nagpal</h5>
+                  <p class="small text-muted">Director General</p>
+                </div>
+              </div>
+            </div>
+          </div>
+<!-- row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 -->
+         
+
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
+            <!-- Card-->
+            <div class="card shadow-lg border-0 rounded">
+              <div class="card-body p-0">
+                <img
+                  src="../PHOTOS (File responses)/hiba.jpg"
+                  alt=""
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Hiba Mukhtar Dedmari</h5>
                   <p class="small text-muted">Chef De Cabinet</p>
@@ -222,15 +227,15 @@
       </div>
       <section class="container rounded" style="background: #fff">
         <div class="row p-5 mb-4">
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/SHUBANGI.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Shubhangi Thakur</h5>
                   <p class="small text-muted">USG Delegate Affairs</p>
@@ -239,15 +244,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/WhatsApp Image 2021-02-22 at 8.58.04 PM - Charge D_Affairs.jpeg"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Sadhaya Rudrani</h5>
                   <p class="small text-muted">Deputy USG Delegate Affairs</p>
@@ -256,15 +261,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/ISHA.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Isha Khurana</h5>
                   <p class="small text-muted">
@@ -275,15 +280,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/SUKRITI.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Sukriti Chandok</h5>
                   <p class="small text-muted">
@@ -294,15 +299,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/HRITIK.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Hrithik Raj</h5>
                   <p class="small text-muted">USG Web Operations</p>
@@ -312,16 +317,16 @@
           </div>
 
           <div
-            class="col-lg-4 col-md-6 mb-4 mb-lg-5"
+            class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3"
           >
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/NIPUNIKA.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Nipunika Sahgal</h5>
                   <p class="small text-muted">USG International Press</p>
@@ -331,16 +336,16 @@
           </div>
 
           <div
-            class="col-lg-4 col-md-6 mb-4 mb-lg-5"
+            class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3"
           >
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/RYTHM.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Rhythm Chakraborty</h5>
                   <p class="small text-muted">Deputy USG International Press</p>
@@ -349,15 +354,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/ZEESHAAN.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Zeeshan Farhed</h5>
                   <p class="small text-muted">UDG Marketing & Promotions</p>
@@ -366,15 +371,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/ZEBA.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Zeba Hussain</h5>
                   <p class="small text-muted">
@@ -385,15 +390,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/MJ.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Maninderjeet Singh</h5>
                   <p class="small text-muted">UDG Design</p>
@@ -402,15 +407,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/ANKUSH.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Ankush Singha</h5>
                   <p class="small text-muted">Deputy UDG Design</p>
@@ -419,15 +424,15 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 mb-4 mb-lg-5">
+          <div class="col-lg-3 col-md-6 mb-4 mb-lg-5 g-3">
             <!-- Card-->
             <div class="card shadow-lg border-0 rounded">
               <div class="card-body p-0">
-                <!-- <img
-                  src="https://res.cloudinary.com/mhmd/image/upload/v1570799922/profile-1_dewapk.jpg"
+                <img
+                  src="../PHOTOS (File responses)/VIPUL.png"
                   alt=""
-                  class="w-100 card-img-top"
-                /> -->
+                  class="w-100 card-img-top img-fluid d-block"
+                />
                 <div class="p-4">
                   <h5 class="mb-0">Vipul Singla</h5>
                   <p class="small text-muted">UDG Finance</p>
