--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="./messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="committees-gallery.html">Committees</a>
             </li>
             <li class="nav-item dropdown">
