--- a/delegates/aippm.html
+++ b/delegates/aippm.html
@@ -81,6 +81,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="../messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../committees-gallery.html"
                 >Committees</a
               >
@@ -170,6 +173,39 @@
             />
           </div>
         </div>
+        
+        <div class="container marketing mt-5 p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
+          <!-- START THE FEATURETTES -->
+          <div class="eb-container">
+           <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../static/Aakarsh Shrivastava.jpg"
+              alt=""
+            />
+            <h3 class="text-center m-3">Aakarsh Shrivastava</h3>
+            <h5 class="text-center m-3">Dept. Moderator</h5>
+
+          </div>
+           <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../delegates-logo/aippm-ip.png"
+              alt=""
+            />
+           </div>
+         <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../static/Aniket Basu.jpeg"
+              alt=""
+            />
+            <h3 class="text-center m-3">Aniket Basu</h3>
+                        <h5 class="text-center m-3">Moderator</h5>
+
+          </div>
+        </div>
+
 
         <!-- /END THE FEATURETTES -->
       </div>
