--- a/delegates/ctc.html
+++ b/delegates/ctc.html
@@ -81,6 +81,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="../messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../committees-gallery.html"
                 >Committees</a
               >
@@ -166,6 +169,38 @@
             />
           </div>
         </div>
+         <div class="container marketing mt-5 p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
+          <!-- START THE FEATURETTES -->
+          <div class="eb-container">
+           <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../static/shayer.jpg"
+              alt=""
+            />
+            <h3 class="text-center m-3">Shayer Majumdar</h3>
+                        <h5 class="text-center m-3">Chairperson</h5>
+
+          </div>
+           <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../delegates-logo/ctc.png"
+              alt=""
+            />
+           </div>
+         <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../static/Siddhant Treasure.png"
+              alt=""
+            />
+            <h3 class="text-center m-3">Siddhant Treasure</h3>
+                        <h5 class="text-center m-3">Vice Chairperson</h5>
+
+          </div>
+        </div>
+
 
 
         <!-- /END THE FEATURETTES -->
