--- a/delegates/ip.html
+++ b/delegates/ip.html
@@ -81,6 +81,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link " href="../messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../committees-gallery.html"
                 >Committees</a
               >
@@ -172,6 +175,36 @@
             />
           </div>
         </div>
+         <div class="container marketing mt-5 p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
+          <!-- START THE FEATURETTES -->
+          <div class="eb-container">
+           <div class="col-md-4">
+            <img
+              class="d-block img-fluid"
+              src="../static/tay.JPG"
+              alt=""
+            />
+            <h3 class="text-center m-3">Tayabba Rizwan</h3>
+                        <h5 class="text-center m-3">Editor in-Chief</h5>
+          </div>
+           <div class="col-md-4">
+            <img
+              class="d-block img-fluid"
+              src="../delegates-logo/ip-white.png"
+              alt=""
+            />
+           </div>
+         <!-- <div class="col-md-3">
+            <!-- <img
+              class="d-block img-fluid"
+              src="../static/tay.JPG"
+              alt=""
+            />
+             -->
+
+          </div> -->
+        </div>
+
 
 
         <!-- /END THE FEATURETTES -->
