--- a/delegates/wha.html
+++ b/delegates/wha.html
@@ -81,6 +81,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="../messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../committees-gallery.html"
                 >Committees</a
               >
@@ -170,6 +173,38 @@
             />
           </div>
         </div>
+        <div class="container marketing mt-5 p-5 mt-5 text-grey rounded" style="background-color: #f5a98c">
+          <!-- START THE FEATURETTES -->
+          <div class="eb-container">
+           <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../static/Parinay Gupta.jpg"
+              alt=""
+            />
+            <h3 class="text-center m-3">Parinay Gupta</h3>
+                        <h5 class="text-center m-3">Co-Chairperson</h5>
+
+          </div>
+           <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../delegates-logo/wha.png"
+              alt=""
+            />
+           </div>
+         <div class="col-md-3">
+            <img
+              class="d-block img-fluid"
+              src="../static/Daria Kisseleva.jpg"
+              alt=""
+            />
+             <h3 class="text-center m-3">Daria Kisseleva</h3>
+                         <h5 class="text-center m-3">Co-Chairperson</h5>
+
+          </div>
+        </div>
+
 
         <!-- /END THE FEATURETTES -->
       </div>
