--- a/register/delegate_register.html
+++ b/register/delegate_register.html
@@ -108,6 +108,9 @@
               </ul>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="../messages.html">Messages</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="../committees-gallery.html"
                 >Committees</a
               >
